kubernetes/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-node
  namespace: desafio-devops
spec:
  type: NodePort
  selector:
    app: app_node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
